plugins {
    id 'org.springframework.boot' version '3.0.13'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group 'com.wiiee.server'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':common')

    // Spring Boot starters
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // JWT (updated to latest stable version with security fixes)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // OpenAPI/Swagger (SpringDoc for Spring Boot 3)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // AWS S3 (Spring Cloud AWS 3.x for Spring Boot 3)
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.0'

    // QueryDSL 5.x (Jakarta EE support)
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // Utilities
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'org.json:json:20240303'
    implementation 'org.modelmapper:modelmapper:3.2.0'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    // SQL Logging
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    // Slack API
    implementation 'com.slack.api:bolt:1.38.3'
    implementation 'com.slack.api:bolt-servlet:1.38.3'
    implementation 'com.slack.api:bolt-jetty:1.38.3'

    // HTTP Client
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Database
    runtimeOnly 'org.postgresql:postgresql'

    // S3Mock for local development
    implementation 'io.findify:s3mock_2.13:0.2.6'

    // Test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation 'io.rest-assured:json-schema-validator:5.4.0'
    testImplementation 'org.mockito:mockito-inline:5.2.0'

    // Fixture Monkey (updated for Spring Boot 3)
    testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.13'
    testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-mockito:1.0.13'
    testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-jakarta-validation:1.0.13'

    // Testcontainers
    testImplementation 'org.testcontainers:testcontainers:1.19.4'
    testImplementation 'org.testcontainers:postgresql:1.19.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.4'

    testImplementation(testFixtures(project(":common")))
}

test {
    useJUnitPlatform()
}
